Trying to correct left alignment problem of the progress bar.

--- a/assets/css/breathe.css
+++ b/assets/css/breathe.css
@@ -25,6 +25,7 @@ html, body {
 #progressCanvas {
     position: absolute;
     top: 0;
+    left: 0;
 }
 
 #buttonDiv {
